HTML update forms

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <ul>
                 <!-- Не понятно почему кнопка реализована через ul>li -->
                 <li>
-                    <button type="button">Войти</button>
+                    <a href="#">
+                        Войти
+                    </a>
                 </li>
             </ul>
         </nav>
@@ -70,7 +72,7 @@
             <h2>Фотогалерея</h2>
             <figure>
                 <a href="#">
-                    <img src="" alt="Интерьер" width="286" height="">
+                    <img src="" alt="Интерьер" width="286" height="164">
                 </a>
             </figure>
             <button type="button">Вперёд</button>
@@ -96,8 +98,25 @@
         <section>
             <h2>Записаться</h2>
             <p>Укажите желаемую дату и время...</p>
-            <form action="">
-                <!-- пока пустая -->
+            <form action="#" method="post">
+                <p>
+                    <!-- Вместо <p> можно завернуть в <div> -->
+                    <label for="appointment-date">Дата</label>
+                    <input id="appointment-date" type="date" name="date" value="2020-05-20">
+                </p>
+                <p>
+                    <label for="appointment-time">Время</label>
+                    <input id="appointment-time" type="time" name="time" value="15:00">
+                </p>
+                <p>
+                    <label for="appointment-name">Ваше имя</label>
+                    <input id="appointment-name" type="text" name="name" value="" placeholder="Бородай">
+                </p>
+                <p>
+                    <label for="appointment-phone">Телефон</label>
+                    <input id="appointment-phone" type="tel" name="phone" value="" placeholder="+7 123 456-78-95">
+                </p>
+                <button type="submit">Отправить</button>
             </form>
         </section>
     </main>
@@ -129,15 +148,33 @@
         <!-- скрытый слой входа в личный кабинет -->
         <h2>Личный кабинет</h2>
         <p>Введите свой логин и пароль.</p>
-        <form action="">
-            <!-- пока пустая -->
+        <form action="#" method="post">
+            <p>
+                <label for="user-login">Логин</label>
+                <input id="user-login" type="email" name="login" placeholder="email@example.com">
+            </p>
+            <p>
+                <label for="user-password">Пароль</label>
+                <input id="user-password" type="password" name="password" placeholder="****************">
+            </p>
+            <p>
+                <input id="login-password-info" type="checkbox" name="remember">
+                <label for="login-password-info">
+                    Запомните меня
+                </label>
+                <a href="#">Я забыл пароль!</a>
+            </p>
+            <button type="submit">Войти</button>
         </form>
         <button type="button">Закрыть</button>
     </section>
 
     <section>
-        <!-- скрытый слой карта -->
         <h2>Как до нас добраться</h2>
+        <p>
+            <img src="#" width="780" height="560" alt="Офис компании по адресу 
+            ул. Большая Конюшенная 19/8 Санкт-Петербург"> <!-- в alt указать адрес -->
+        </p>
         <button type="button">Закрыть</button>
     </section>
 </body>
