--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <h2>Фотогалерея</h2>
                 <figure class="gallery-content">
                     <a href="#">
-                        <img src="" alt="Интерьер" width="286" height="164"> <!-- извлечь и добавить картинку -->
+                        <img src="img/gallery.jpg" alt="Интерьер" width="286" height="164"> <!-- извлечь и добавить картинку -->
                     </a>
                 </figure>
                 <button class="button gallery-button gallery-button-back" type="button">Вперёд</button>
@@ -184,8 +184,8 @@
     <section class="modal modal-map">
         <h2 class="visually-hidden">Как до нас добраться</h2>
         <p>
-            <img src="#" width="780" height="560" alt="Офис компании по адресу 
-            ул. Большая Конюшенная 19/8 Санкт-Петербург"> <!-- извлечь карту из макета, в alt указать адрес -->
+            <img src="img/ha_bar-map.jpg" width="780" height="560" alt="Офис компании по адресу 
+            ул. Большая Конюшенная 19/8 Санкт-Петербург">
         </p>
         <button class="modal-close" type="button">Закрыть</button>
     </section>
