--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     </header>
 
     <main class="container">
-        <h1 class="visually-hidden">Барбершоп &laquo;Бородинский&raquo;</h1> <!-- Даём заголовок, даже если его нет в макете -->
+        <h1 class="visually-hidden">Барбершоп &laquo;Бородинский&raquo;</h1>
 
         <section class="features">
-            <h2 class="visually-hidden">Преимущества</h2> <!-- Этого заголовка тоже нет в макете -->
+            <h2 class="visually-hidden">Преимущества</h2>
             <ul class="feature-list">
                 <li class="feature-item">
                     <h3>Быстро</h3>
@@ -78,7 +78,7 @@
                 <h2>Фотогалерея</h2>
                 <figure class="gallery-content">
                     <a href="#">
-                        <img src="img/gallery.jpg" alt="Интерьер" width="286" height="164"> <!-- извлечь и добавить картинку -->
+                        <img src="img/gallery.jpg" alt="Интерьер" width="286" height="164">
                     </a>
                 </figure>
                 <button class="button gallery-button gallery-button-back" type="button">Вперёд</button>
@@ -124,7 +124,7 @@
                         <label for="appointment-phone">Телефон</label>
                         <input id="appointment-phone" type="tel" name="phone" value="" placeholder="+7 123 456-78-95">
                     </p>
-                    <button type="submit">Отправить</button>
+                    <button class="button" type="submit">Отправить</button>
                 </form>
             </section>
         </div>
