--- a/index.html
+++ b/index.html
@@ -186,7 +186,9 @@
             </p>
             <button class="button" type="submit">Войти</button>
         </form>
-        <button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
+        <button class="modal-close" type="button">
+            <span class="visually-hidden">Закрыть</span>
+        </button>
     </section>
 
     <section class="modal modal-map">
@@ -195,7 +197,9 @@
             <img src="img/ha_bar-map.jpg" width="780" height="560" alt="Офис компании по адресу 
             ул. Большая Конюшенная 19/8 Санкт-Петербург">
         </p>
-        <button class="modal-close" type="button">Закрыть</button>
+        <button class="modal-close" type="button">
+            <span class="visually-hidden">Закрыть</span>
+        </button>
     </section>
 </body>
 
