Add JS action to popup

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <ul class="user-navigation">
                         <li>
                             <a class="login-link" href="login.html">
-                                Войти
+                                Войти<!-- Заходите гости дорогие -->
                             </a>
                         </li>
                     </ul>
@@ -201,6 +201,8 @@
             <span class="visually-hidden">Закрыть</span>
         </button>
     </section>
+
+    <script src="js/popup.js"></script>
 </body>
 
 </html>
