--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     пн-пт: с 10:00 до 22:00<br>
                     сб-вс: с 10:00 до 19:00
                 </p>
-                <a class="button" href="map.html">Как проехать</a>
+                <a class="button map-button" href="map.html">Как проехать</a>
                 <a class="button" href="contacts.html">Обратная связь</a>
             </section>
     
@@ -193,8 +193,11 @@
 
     <section class="modal modal-map">
         <h2 class="visually-hidden">Как до нас добраться</h2>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603625300289!2d30.320858715830845!3d59.93871916905453!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sua!4v1594836658342!5m2!1sru!2sua" width="780" height="560" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+
         <p>
-            <img src="img/ha_bar-map.jpg" width="780" height="560" alt="Офис компании по адресу 
+            <img src="img/ha_bar-map.jpg" alt="Офис компании по адресу 
             ул. Большая Конюшенная 19/8 Санкт-Петербург">
         </p>
         <button class="modal-close" type="button">
@@ -203,6 +206,8 @@
     </section>
 
     <script src="js/popup.js"></script>
+    <script src="js/map.js"></script>
+
 </body>
 
 </html>
